# productivity-factor-shares

./: .gitignore  README.md  example.py  intrustructions.md  pyproject.toml
data/processed/: binscatter_profit.csv  binscatter_wage.csv  dshares_vs_prod.csv
data/raw/: COE.csv  CPROFIT.csv  GDP.csv  OPHNFB.csv
results/: regression_summary.csv  regression_summary.json  stationarity_tests.csv  stationarity_tests.json
src/: __init__.py  analysis.py  build_dataset.py  cli.py  fred_client.py  plots.py  stationarity.py
tests/: test_smoke.py
